fix: overflow-x scroll for tables

--- a/style/style.css
+++ b/style/style.css
@@ -53,3 +53,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.overflow-x-scroll {
+  overflow-x: scroll;
+}
